# gamepad-test-c

./: .clang-format  .cmake-format.py  .gitmodules  CMakeLists.txt  README.md
src/: gamepad.c  gamepad.h  main.c  parser.c  parser.h
